--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.abdullahiqbal.chathub">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>-->
     <application
         android:label="chathub"
         android:name="${applicationName}"
@@ -30,6 +33,16 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_channel_id"-->
+        <!--            android:value="chat_channel" />-->
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_icon"-->
+        <!--            android:resource="@drawable/ic_launcher" />-->
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_color"-->
+        <!--            android:resource="@color/primary" />-->
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
