--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,40 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get:
   hive:
   hive_flutter:
+
+
+
+#New devs
+  camera:
+  emoji_picker_flutter:
+  video_player:
+
+  # UI / utilities
+  flutter_svg:
+  eva_icons_flutter:
+
+  intl_phone_field:
+
+  # State / tools
+  get:
+  jiffy:
+
+  # Storage / system
+  shared_preferences:
   path_provider:
+  path:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  firebase_storage:
+  image_picker:
+  image:
+  cached_network_image:
+  salomon_bottom_bar:
+  firebase_database:
+  firebase_dynamic_links:
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +82,10 @@ flutter_launcher_icons:
   ios: true
   image_path: "images/logo.png"
   min_sdk_android: 21
+
+#  image_path: "assets/images/logo.png"
+
+  #flutter pub run flutter_launcher_icons:main
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,6 +108,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/images/
+    - assets/images/person/
+    - assets/images/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,12 +124,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Helvetica
+      fonts:
+        - asset: assets/fonts/Helvetica.ttf
+        - asset: assets/fonts/Helvetica-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Helvetica-light.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
